--- a/local.yml
+++ b/local.yml
@@ -9,5 +9,12 @@
           - vim
           - maven
           - openvpn
+          - python3
         state: present
         autoclean: yes
+
+    - name: Download latest IntelliJ
+      unarchive:
+        dest: /opt/
+        src: https://download.jetbrains.com/product?code=IIC&latest&distribution=linux
+        remote_src: yes
