--- a/local.yml
+++ b/local.yml
@@ -1,20 +1,10 @@
 - hosts: localhost
   become: true
-  tasks:
-    - name: Install packages
-      apt:
-        name:
-          - htop
-          - git
-          - vim
-          - maven
-          - openvpn
-          - python3
-        state: present
-        autoclean: yes
+  pre_tasks:
+    - name: Update repositories
+      apt: update_cache=yes
+      changed_when: False
 
-    - name: Download latest IntelliJ
-      unarchive:
-        dest: /opt/
-        src: https://download.jetbrains.com/product?code=IIC&latest&distribution=linux
-        remote_src: yes
+  tasks:
+    - include: tasks/packages.yml
+    - include: tasks/intellij.yml
