Install zsh and oh-my-zsh

--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -7,5 +7,7 @@
       - maven
       - openvpn
       - python3
+      - zsh
+      - fonts-powerline # Fonts for the oh-my-zsh agnoster scheme
     state: present
     autoclean: yes
