--- a/local.yml
+++ b/local.yml
@@ -9,3 +9,4 @@
     - include: tasks/packages.yml
     - include: tasks/intellij.yml
     - include: tasks/zsh.yml
+    - include: tasks/minishift.yml
