--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -6,6 +6,7 @@
       - vim
       - maven
       - openvpn
+      - resolvconf
       - python3
       - zsh
       - fonts-powerline # Fonts for the oh-my-zsh agnoster scheme
