--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -16,5 +16,6 @@
       - libvirt-daemon-system
       - python-libvirt # Required for Ansible virt_net module
       - python-lxml    # Required for Ansible virt_net module
+      - parallel       # Runs shell scripts in parallel
     state: present
     autoclean: yes
